@@ -1,0 +1,6 @@
+[Desktop Entry]
+_Name=Internet and Network
+_Comment=Network-related settings
+Icon=gnome-globe
+Type=Directory
+Encoding=UTF-8
